# corepy

./: .gitignore  ARCHITECTURE_VISION.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COREPY_V1_REVIEW.md  GIT_WORKFLOW_DESIGN.md  LICENSE  PROJECT_REPORT.md  README.md  TROUBLESHOOTING_INSTALL.md  pyproject.toml  requirements-base.txt  requirements-cpu.txt
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  release.yml
benchmarks/: backend_thresholds.py  runner.py
bindings/python/: CMakeLists.txt  main.cpp
corepy/: __init__.py  tensor.py
corepy/backend/: __init__.py  backend.py  device.py  dispatch.py  errors.py  reference.py  selector.py  session.py  types.py
corepy/compute/: __init__.py
corepy/data/: table.py
corepy/ops/: math.py
corepy/runtime/: pipeline.py
corepy/schema/: __init__.py  base.py
csrc/: CMakeLists.txt
csrc/include/: corepy_kernels.h
csrc/kernels/: dummy.cpp
docs/: api.rst  backend_selection.md  conf.py  index.rst  install.md  usage.md
examples/: hello_corepy.py
rust/: Cargo.toml
rust/corepy-runtime/: Cargo.toml
rust/corepy-runtime/src/: lib.rs
scripts/: setup_dev.sh
tests/: conftest.py  test_backend_selector.py  test_dispatch.py  test_dispatch_matmul.py  test_tensor_integration.py
tests/integration/: test_flow.py
tests/unit/: test_api.py  test_data.py  test_init_fallback.py  test_pipeline.py  test_schema.py
